--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,3 +23,7 @@ tr{
     font-family: 'Rubik', sans-serif;
     font-weight: 300;
 }
+
+body{
+    background-image: url("https://www.pricerighthome.com/media/catalog/product/cache/1/image/765x937/9df78eab33525d08d6e5fb8d27136e95/m/a/mar128_marvel_comic_strip_wallpaper_black_white_p1.jpg")
+}
