--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,9 +8,9 @@
 
 h1{
     font-family: 'Marvel', sans-serif;
-    font-weight: 700;
     font-style: normal;
-    font-size: 2em;
+    font-size: 3em;
+    font-weight: bold;
     color: black;
     font-variant: normal;
 }
@@ -18,6 +18,7 @@ h2{
   font-family: 'Marvel', sans-serif;
   font-weight: 400;
   font-style: italic;
+  font-weight: bold;
   font-size: 1.5em;
   color:black;
   font-variant: normal;
@@ -27,7 +28,7 @@ h3{
     font-family: 'Rubik', sans-seriff;
     font-style: normal;
     font-variant: normal;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 17px;;
     color: black;
 }
@@ -131,13 +132,6 @@ tr{
 
 .about-the-park-body-content {
     position: relative;
-  }');
-    background-repeat: round;
-    background-size: 400px;
-
-  }
-.about-the-park-body-content {
-    position: relative;
   }
 
 .things-to-do-body-wrap {
@@ -162,4 +156,49 @@ tr{
     position: relative;
   }
 
+.navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.nav-item-page-link {
+  float: left;
+}
+.nav-item-logo {
+  float: left;
+  padding: 0px 0px; 
+}
+.nav-item-page-button {
+  float: right;
+}
 
+
+.nav-item-page-button  {
+  display: block;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 14px 16px; 
+  text-decoration: none;
+  }
+  
+.nav-item-page-link  a {
+display: block;
+color: rgb(255, 255, 255);
+text-align: center;
+padding: 14px 16px; 
+text-decoration: none;
+}
+
+.nav-item-page-link a:hover:not(.active) {
+background-color: #111;
+}
+
+.active {
+background-color: #04AA6D;
+
+}
