changed social media url

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,7 +3,7 @@
 
 /*Importing Rubik Font from Google Font*/
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-@import url('http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
 
 
