--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -79,7 +79,12 @@ h3{
 }
 
 #i-aip-ironman-image {
-  box-shadow: 5px 5px 2px red;
+
+  /* box-shadow: 10px 10px 5px red;;
+  -moz-box-shadow: 10px 10px 5px red;
+  -webkit-box-shadow: 10px 10px 5px red;
+  -khtml-box-shadow: 10px 10px 5px red; */
+  box-shadow: rgba(170, 5, 5, 0.8) 0px 7px 29px 0px;    
 }
 
 #i-aip-hulk-image {
@@ -96,7 +101,7 @@ p{
   font-family: 'Rubik','Marvel', sans-serif; 
   font-weight: 400;
   font-style: normal; 
-  font-size: 1em;
+  font-size: 1.2em;
   color: black;
   font-variant: normal;
 }
@@ -119,7 +124,7 @@ tr{
     top: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.2;
+    opacity: 0.1;
     background-image:  url('https://www.wallpaperup.com/uploads/wallpapers/2013/08/28/139975/7d64d84d499b26ed32601b80c6c6fb66.jpg');
     /* background-repeat: round; */
     background-size: 3000px;
@@ -186,10 +191,12 @@ tr{
   padding: 0;
   overflow: hidden;
   background-color: #333;
-  position: fixed;
+  position:fixed;
   top: 0;
-  width: 100%;
+  width: 99.3%;
   opacity: .9;
+  z-index: 7000;
+
 }
 /* navigation bar items  */
 .nav-item-page-link {
@@ -407,6 +414,8 @@ footer{
     -moz-box-shadow: 10px 10px 5px rgb(240, 19, 30);
     -webkit-box-shadow: 10px 10px 5px rgb(240, 19, 30);
     -khtml-box-shadow: 10px 10px 5px rgb(240, 19, 30);
+    box-shadow: rgba(223, 31, 45, 0.8) 0px 7px 29px 0px;
+    
   
 }
 
@@ -414,20 +423,22 @@ footer{
 #i-tod-spiderman-image {
   border: 2px solid #2B3784;
   /* box-shadow: 10px 5px 5px rgb(240, 19, 30); */
-  box-shadow: 10px 10px 5px #2B3784;
+  /* box-shadow: 10px 10px 5px #2B3784;
     -moz-box-shadow: 10px 10px 5px #2B3784;
     -webkit-box-shadow: 10px 10px 5px #2B3784;
-    -khtml-box-shadow: 10px 10px 5px #2B3784;
+    -khtml-box-shadow: 10px 10px 5px #2B3784; */
+    box-shadow: rgba(8, 123, 190, 0.8) 0px 7px 29px 0px;
   
 }
 /* All hulk  object uses same hulk green color to help user identify */
 #i-tod-hulk-image {
   border: 2px solid #008000;
   /* box-shadow: 10px 5px 5px rgb(240, 19, 30); */
-  box-shadow: 10px 10px 5px #008000;
+  /* box-shadow: 10px 10px 5px #008000;
     -moz-box-shadow: 10px 10px 5px #008000;
     -webkit-box-shadow: 10px 10px 5px #008000;
-    -khtml-box-shadow: 10px 10px 5px #008000;
+    -khtml-box-shadow: 10px 10px 5px #008000; */
+    box-shadow: rgba(0,128,0, 0.8) 0px 7px 29px 0px;    
   
 }
 
@@ -527,3 +538,161 @@ footer{
   text-align: center;
 }
 
+/* Things to do page image slider  */
+.trigger {
+  display: none;
+}
+
+.slider, .slider-wrapper {
+  position: relative;
+  height: 250px;
+  padding-top: 0px;
+}
+
+.slide {
+  background-color: black;
+  width: 100%;
+  overflow: hidden;
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 5000;
+  opacity: 0;
+  transition: opacity .5s ease-in-out;
+}
+
+.slide-img {
+  filter: brightness(50%);
+  height: 100%;
+  object-fit: fill;
+  display: block;
+  margin: 0 auto;
+}
+
+.slide-img-3 {
+  filter: brightness(50%);
+  height: 100%;
+  object-fit: fill;
+  display: block;
+  margin: -1050px 0px 0px -0px;
+}
+.slide-img-2 {
+  filter: brightness(50%);
+  height: 100%;
+  object-fit: fill;
+  display: block;
+  margin: -400px 0px 0px -0px;
+}
+.slide-img-1 {
+  filter: brightness(50%);
+  height: 100%;
+  object-fit: fill;
+  display: block;
+  margin: -400px 0px 0px -0px;
+}
+.slide-figure {
+  height: 100%;
+  position: relative;
+  margin: 0;
+}
+
+.slide-caption {
+  position: absolute;
+  bottom: 30%;
+  width: calc(100% - 1rem);
+  color: white;
+  text-align: center;
+  left: 50%;
+}
+
+.trigger:checked + .slide {
+  z-index: 6000;
+  opacity: 1;
+}
+
+.slider-nav {
+  width: 100%;
+  text-align: center;
+  margin: 1rem 0;
+}
+
+.slider-nav__item {
+  display: inline-block;
+}
+
+.slider-nav__label {
+  font-size: 13px;
+  background-color: #333;
+  display: block;
+  height: 2em;
+  line-height: 2em;
+  width: 2em;
+  text-align: center;
+  border-radius: 50%;
+  color: white;
+  cursor: pointer;
+  transition: background-color .25s, color .25s ease-in-out;
+}
+
+.slider-nav__label:hover,
+.slider-nav__label:active,
+.slider-nav__label:focus {
+  background-color: gray;
+  color: black;
+}
+
+@media only screen and (min-width: 1024px) {
+  .slider, .slider-wrapper {
+    height: 480px;
+  }
+
+  .slide-caption {
+    width: 65%;
+    font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 1023px) and (min-width: 768px) {
+  .slider, .slider-wrapper {
+    height: 360px;
+  }
+
+  .slide-caption {
+    width: 75%;
+    font-size: 1.25rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .slide-img,.slide-img-1,.slide-img-2 ,.slide-img-3{
+    width: 100%;
+    height: auto;
+  }
+}
+.video-container {
+  position:absolute;
+  top:-5.8px;
+  bottom: 100px;
+  width: 100%;
+  height: 37%; 
+  z-index:400;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  
+}
+.video-container video {
+  /* Make video to at least 100% wide and tall */
+  min-width: 100%; 
+  min-height: 100%; 
+
+  /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+  /* width: auto;
+  height: auto; */
+
+  /* Center the video */
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
