--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -672,10 +672,10 @@ footer{
 }
 .video-container {
   position:absolute;
-  top:-5.8px;
-  bottom: 100px;
+  top:-100px;
+  bottom: 10px;
   width: 100%;
-  height: 37%; 
+  height: 25%; 
   z-index:400;
   overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
@@ -684,7 +684,7 @@ footer{
 .video-container video {
   /* Make video to at least 100% wide and tall */
   min-width: 100%; 
-  min-height: 100%; 
+  min-height: 50%; 
 
   /* Setting width & height to auto prevents the browser from stretching or squishing the video */
   /* width: auto;
@@ -695,4 +695,17 @@ footer{
   top: 70%;
   left: 50%;
   transform: translate(-50%,-50%);
+}
+.index-heading-main{
+
+  text-align: center;
+  padding-top: 600px;
+  font-family: 'Marvel', arial;
+  font-size: 9px;
+  font-weight: bold;
+  color: black;
+  font-variant: normal;
+  text-shadow: 1px 1px 2px black;
+  opacity: .7;
+
 }
