--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -474,6 +474,8 @@ footer{
   border: 0x solid RGB(255, 0, 00);
   box-shadow: 7px 7px 30px RGB(255, 90, 00);
   -webkit-box-shadow: RGB(255, 90, 00);
+  animation: colorchange 4s;
+  animation-iteration-count:infinite;
 }
 
 #i-ticket-image { 
@@ -711,4 +713,64 @@ footer{
   text-shadow: 1px 1px 2px black;
   opacity: .7;
 
+}
+
+
+
+/* Index page positioning  */
+
+
+.index-top-grid {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 500px;
+  height: 450px;
+  align-content: space-between;
+
+
+}
+.specialOffer {
+  display: flex;
+
+}
+.index-bottom-grid {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 450px;
+  height: 450px;
+  align-content: space-between;
+}
+
+.index-heading-content ,.index-heading-main ,.index-top-grid h3,.index-bottom-grid h3{
+  text-align: center;
+}
+
+/* to change color (animate on index page) */
+@keyframes colorchange{
+    0%   {border:4px  solid rgba(250, 80, 20, 1);}
+    40%   {border:4px solid rgba (100, 240, 90, 1);}
+    100% {border:4px  solid rgba(200, 200, 20, 1);}
+}
+
+/* to make images on the index page vibrate when the user interacts */
+#mainbutton:hover {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
