--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -89,7 +89,8 @@ h3{
   font-weight: bold;
 }
 #i-aip-ironman-image {
-  box-shadow: rgba(170, 5, 5, 0.8) 0px 7px 29px 0px;    
+  box-shadow: rgba(170, 5, 5, 0.8) 0px 7px 29px 0px; 
+  border-radius: 20px; 
 }
 
 
@@ -163,7 +164,6 @@ tr{
 .about-the-park-body-content {
     position: relative;
   }
-
 
 /* navigation bar   */
 .navbar {
@@ -1119,3 +1119,10 @@ buttonpic1{
   font-size: 30px;
   font-weight: bold;
  }
+
+
+/*Hovering Code for About the Park*/
+#i-aip-spiderman-image:hover{
+    transform: scale(1.1);
+    transition: transform 0.2s;
+}
